Fix : adapt the new <a> buttons on mobile view

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -17,7 +17,7 @@ li {
     all: unset;
 }
 
-a {
+#logo {
     display: inline-block;
     cursor: pointer;
 }
