--- a/public/css/pages/home.css
+++ b/public/css/pages/home.css
@@ -36,6 +36,8 @@ h1 {
 @media (max-width: 1100px) {
     .btn-list {
         flex-direction: column;
+        padding-right: 1.25rem;
+        padding-left: 1.25rem;
     }
 
     .btn-list .btn {
@@ -43,7 +45,6 @@ h1 {
     }
 
     a {
-        margin: 0 1.25rem;
         margin-bottom: 0.6rem;
     }
 }
